Fix group icon spacing and improve Space Settings UI

--- a/src/components/primitives/Button/Button.scss
+++ b/src/components/primitives/Button/Button.scss
@@ -80,7 +80,7 @@
 }
 
 .btn-small {
-  @apply py-1 px-2 text-xs shadow-sm;
+  @apply py-1 px-2 text-xs shadow-sm border;
 }
 
 .btn-disabled {
